# trajectory-clustering

./: .gitattributes  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  analysis.txt  bladon_heath_10.txt  build.sh  c1.txt  c2.txt  church_10.txt  cmake_install.cmake  coord_conversion.R  coord_conversion.Rout  coord_unconversion.R  export_gpx_centers.py  gmon.out  horspath_10.txt  main.cpp  make_bar_plot.py  plot.txt  plot_all_centers.py  plot_all_conv.py  plot_clustering.py  plot_simpl.py  plotting_script.py  point_based_path.txt  polyfit.py  vert_2_results.csv  warping_path.txt  warping_path_h.txt  weston_10.txt
2d_paper_results/correctness/scripts/: heur_comp.py
2d_paper_results/scripts/: polyfit.py
Google_tests/: CDTW_L1_L2Squared_L1.cpp  CMakeLists.txt  CellTest.cpp  NaiveLowerEnvelopeTest.cpp  PolynomialTest.cpp  geomTest.cpp
characters/: a.l1_txt  b.l1_txt  c.l1_txt  d.l1_txt  e.l1_txt  g.l1_txt  h.l1_txt  l.l1_txt  m.l1_txt  n.l1_txt  o.l1_txt  p.l1_txt  q.l1_txt  r.l1_txt  s.l1_txt  u.l1_txt  v.l1_txt  w.l1_txt  y.l1_txt  z.l1_txt
convergence/: scores.txt
convergence/gpx/: bladon.gpx  church.gpx  horspath.gpx  weston.gpx
curves/: center_curve0.txt  center_curve1.txt  center_curve2.txt  curve0.txt  curve1.txt  curve10.txt  curve11.txt  curve12.txt  curve13.txt  curve14.txt  curve15.txt  curve16.txt  curve17.txt  curve18.txt  curve19.txt  curve2.txt  curve20.txt  curve21.txt  curve22.txt  curve23.txt  curve3.txt  curve4.txt  curve5.txt  curve6.txt  curve7.txt  curve8.txt  curve9.txt
data/: .gitignore  coord_conversion.R  download_characters.py  download_movebank.py  download_pigeons.py  twopoint_conversion.R
data/data/: intial_clustering_experiment_results.txt
data/data/simpl/: best154  best52  crv154  crv52  gr_cdtw154  gr_fr154  ii_dtw52  ii_fr154
figures/: plot_initial_clustering.py
pigeons/Bladon & Church route recapping/bladon heath/: a55.l1_txt  brc.l1_txt  c17.l1_txt  c35.l1_txt  p29.l1_txt  p39.l1_txt  p94.l1_txt
pigeons/Bladon & Church route recapping/church hanborough/: a94.l1_txt  c22.l1_txt  c70.l1_txt  k77.l1_txt  l29.l1_txt  liv.l1_txt  r47.l1_txt  s93.l1_txt
pigeons/Horspath/: H22.l1_txt  H27.l1_txt  H30.l1_txt  H35.l1_txt  H38.l1_txt  H41.l1_txt  H42.l1_txt  H71.l1_txt
pigeons/Weston/: H23.l1_txt  H31.l1_txt  H32.l1_txt  H34.l1_txt  H36.l1_txt  H50.l1_txt  H58.l1_txt  H62.l1_txt
points/: points_0.txt  points_1.txt  points_2.txt  points_3.txt  points_4.txt  points_5.txt  points_6.txt  points_7.txt  points_8.txt
scripts/: .generate_paper_plots.py.un~  .plot_clustering.py.un~  generate_paper_plots.py  generate_paper_plots.py~  initial_clustering_plots.py  lower_envelope.py  make_bar_plot.py  make_barplot.py  param_space_surface.py  plot_clustering.py  plot_clustering.py~  plot_initial_clustering.py  plot_warping_path.py  plot_warping_path_heur.py  plotting_script.py
segments/: segment_0.txt  segment_1.txt  segment_2.txt  segment_3.txt  segment_4.txt  segment_5.txt  segment_6.txt  segment_7.txt  segment_8.txt  segment_9.txt
simpl/char/: best78  crv78  gr_dtw78  gr_fcdtw78  gr_fr78  ii_dtw78  ii_fr78
simpl/pigeon/: best102  best165  best97  crv102  crv165  crv97  gr_dtw165  gr_fcdtw97  gr_fr165  ii_dtw102  ii_fr165
src/: CMakeLists.txt  Curve.cpp  Curve.h  CurveSimpMatrix.h  Edge.h  FastMarchCDTW.cpp  FastMarchCDTW.h  FastMarchIntegralFrechet.cpp  FastMarchIntegralFrechet.h  SymmetricMatrix.cpp  SymmetricMatrix.h  Vertex.h  a_star.h  basic_types.h  certificate.h  classification_experiment.cpp  classification_experiment.h  compute_distance.h  convergence_experiment.cpp  convergence_experiment.h  curve_simplification.cpp  curve_simplification.h  defs.h  distance_functions.cpp  distance_functions.h  experiments.cpp  experiments.h  expressionml.h  filter.cpp  filter.h  geom.cpp  geom.h  global_variables.h  greedy_l_simplification.h  greedy_simplification.h  id.h  io.cpp  io.h  main.cpp  matrix.h  (+13 more)
src/DTW/: dtw.cpp  dtw.h
src/Frechet/: certificate.h  filter.cpp  filter.h  frechet_abstract.cpp  frechet_abstract.h  frechet_light.cpp  frechet_light.h  frechet_light_types.h  frechet_matching.cpp  frechet_matching.h
src/IntegralFrechet/: Cell.cpp  Cell.h  IntegralFrechet.cpp  IntegralFrechet.h  MatchingBand.cpp  MatchingBand.h  Solver.cpp  Solver.h  metrics.h
src/IntegralFrechet/metrics/: L1.cpp  LInfinity_NoShortcuts.cpp  include.h
src/cdtw/: 1d-l1-l1.h  1d-l1.h  1d-l2squared-l1.h  2d-l1-l1.cpp  2d-l1-l1.h  2d-l2squared-l1.h  2d_utils.cpp  2d_utils.h  BivariatePolynomial.cpp  BivariatePolynomial.h  ConstrainedBivariatePolynomial.h  Constraint.h  Interval.cpp  Interval.h  PiecewisePolynomial.h  Polynomial.cpp  Polynomial.h  cdtw.cpp  cdtw.h  fast_lower_envelope.cpp  fast_lower_envelope.h  integral_solver.cpp  integral_solver.h  naive_lower_envelope.h
src/clustering/: basic_types.h  center_algs.cpp  center_algs.h  center_clustering_algs.cpp  center_clustering_algs.h  center_update.cpp  center_update.h  clustering.h  clustering_algs.cpp  clustering_algs.h  init_clustering_algs.cpp  init_clustering_algs.h  pam.cpp  pam.h  pam_with_simplifications.cpp  pam_with_simplifications.h  plot_clustering.cpp  plot_clustering.h  regression_method.h  wedge_method.h
src/clustering/util/: linear_regression.h  matrix.h  wedge.cpp  wedge.h
src/simplification/: agarwal.cpp  agarwal.h  imaiiri.cpp  imaiiri.h
src/utils/: CurveSimpMatrix.cpp  CurveSimpMatrix.h  DistanceMatrix.h  SymmetricMatrix.cpp  SymmetricMatrix.h  a_star.h  defs.h  expressionml.h  id.h  io.cpp  io.h  matrix.h  random.h  remove_stops.cpp  remove_stops.h  union_find.h  util.h
synthetic_curves/: true_center_curve.txt
vis/: band stats.nb  benchmark.nb  cluster matrix.nb  distance matrix.nb  matching stats.nb  plot_all_utm_curves_with_time.py  plot_curves.py  visualize curves + matching.nb  visualize solver.nb
